tests/snapshots/python_parity_unit_snapshots__dropin_40_network_open_restrict_address_families_only.snap
---
source: tests/python_parity_unit_snapshots.rs
expression: "dropin(&r.drop_ins, \"40-network.conf\")"
---
[Service]
RestrictAddressFamilies=AF_INET
