tests/snapshots/python_parity_unit_snapshots__dropin_50_numa_cpus_only.snap
---
source: tests/python_parity_unit_snapshots.rs
expression: "dropin(&r.drop_ins, \"50-numa.conf\")"
---
[Service]
AllowedCPUs=0-15
