tests/snapshots/python_parity_unit_snapshots__dropin_50_numa_memory_only.snap
---
source: tests/python_parity_unit_snapshots.rs
expression: "dropin(&r.drop_ins, \"50-numa.conf\")"
---
[Service]
AllowedMemoryNodes=0
