tests/snapshots/python_parity_unit_snapshots__dropin_70_hooks_different_parents.snap
---
source: tests/python_parity_unit_snapshots.rs
expression: "dropin(&r.drop_ins, \"70-hooks.conf\")"
---
[Service]
Environment=ACTIONS_RUNNER_HOOK_JOB_STARTED=/opt/gha-pre-hooks/pre.sh
Environment=ACTIONS_RUNNER_HOOK_JOB_COMPLETED=/opt/gha-post-hooks/post.sh
BindReadOnlyPaths=/opt/gha-pre-hooks /opt/gha-post-hooks
